@@ -4,48 +4,48 @@ import ie.dylanmurray.website.dto.project.ProjectResponse;
 import ie.dylanmurray.website.entity.Project;
 import org.springframework.stereotype.Component;
 
-import java.util.stream.Collectors;
-
 @Component
 public class ProjectMapper {
 
-
     private final TechnologyMapper technologyMapper;
     private final ProjectLinkMapper projectLinkMapper;
-
+    private final ProjectMediaMapper projectMediaMapper;
 
     public ProjectMapper(
             TechnologyMapper technologyMapper,
-            ProjectLinkMapper projectLinkMapper
+            ProjectLinkMapper projectLinkMapper,
+            ProjectMediaMapper projectMediaMapper
     ) {
         this.technologyMapper = technologyMapper;
         this.projectLinkMapper = projectLinkMapper;
+        this.projectMediaMapper = projectMediaMapper;
     }
 
-
-    public ProjectResponse toResponse(Project project) {
-
+    public ProjectResponse toResponse(
+            Project project
+    ) {
 
         return new ProjectResponse(
-
                 project.getId(),
-
                 project.getTitle(),
-
                 project.getDescription(),
 
-                project.getLinks().
-                        stream()
+                project.getLinks()
+                        .stream()
                         .map(projectLinkMapper::toResponse)
-                        .collect(Collectors.toList()),
+                        .toList(),
 
                 project.getCreatedAt(),
 
                 project.getTechnologies()
                         .stream()
                         .map(technologyMapper::toResponse)
-                        .collect(Collectors.toList())
+                        .toList(),
 
+                project.getMedia()
+                        .stream()
+                        .map(projectMediaMapper::toResponse)
+                        .toList()
         );
     }
 }
